[workspace]
members = [
    "ddm2gltf",
    "offbeat"
]

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4.3", features = ["derive"] }
grim = { path = "../grim/core/grim" }
log = "0.4.20"
simplelog = "0.12.1"
thiserror = "1.0.48"

[profile.release]
lto = true
strip = true
