[package]
name = "ddm2gltf"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
gltf = { version = "1.2.0", features = [ "extras", "import", "names" ] }
gltf-json = { version = "1.2.0", features = [ "names" ] }
grim_gltf = { workspace = true }
image = { version = "0.24.7", default-features = false, features = [ "dds", "png" ] }
offbeat = { path = "../offbeat" }